# bass-rs

./: .gitignore  Cargo.toml  LICENSE  bundle.sh
bass-rs/: Cargo.toml
bass-rs/src/: bass-init.sql  db.rs
bass-ui/: Cargo.toml  build.rs
bass-ui/src/: config.rs  main.rs  search.rs
bass-ui/ui/: add-item.slint  bass.slint  common.slint  detailed-view.slint  keyword-input.slint  search.slint  types.slint
bass-ui/ui/images/: bass.icns  generate-icons.sh
